fix text overflow in homepage cards

--- a/pages/homepage/style.css
+++ b/pages/homepage/style.css
@@ -75,3 +75,12 @@
   font-size: 12px;
   color: #4c5262;
 }
+
+.card_title,
+.card_subtitle {
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
